# image-magick-console-app

./: CMakeLists.txt  README.md
include/: commands.hpp  tokenizer.hpp
src/: commands.cpp  main.cpp  tokenizer.cpp
